--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     </head>
 
     <body>
+        <div id="divID">
+            <p>O texto é: {{text}}</p>
+            <p>O número é: {{number}}</p>
+            <p>O objeto é: {{player}}</p>
+        </div>
+        <script>
+            var vue = new Vue({
+                el: '#divID',
+                data:{
+                    text: "Hello World",
+                    number: 2022,
+                    player: {
+                        nome: "Mario",
+                        vidas: 3
+                    }
+                }
+            })
+            /*
+            vue.$watch('number', function(){
+                alert("O numero mudou")
+            })
 
+            */
+            vue.number = 2023
+        </script>
     </body>
 </html>
